--- a/test.html
+++ b/test.html
@@ -13,16 +13,33 @@
             margin-top: 100px;
             text-align: center;
             background-color: aquamarine;
-            }
+        }
+
+        .contain {
+            position: relative;
+            left: 25%;
+        }
     </style>
 
 </head>
 
 <body>
     <h1>Bán tool đổi lúa vàng blue</h1>
-    <p>thông tin liên hệ:</p>
-    <a href="https://www.facebook.com/100010558053547" class="btn btn-primary">Facebook</a>
-    <a href="https://zalo.me/0362511165" class="btn btn-success">Zalo</a>
+    <p>Thông tin liên hệ:</p>
+    <div class="contain">
+        <div class="row">
+            <div class="col-md-3">
+                <p>Tính ĐZ:</p>
+                <a href="https://www.facebook.com/tinhducla" class="btn btn-primary">Facebook</a>
+                <a href="https://zalo.me/0362511165" class="btn btn-success">Zalo</a>
+            </div>
+            <div class="col-md-3">
+                <p>Trùm Lương:</p>
+                <a href="https://www.facebook.com/chiluong.hoang.58" class="btn btn-primary">Facebook</a>
+                <!-- <a href="https://zalo.me/0362511165" class="btn btn-success">Zalo</a> -->
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
