--- a/test.html
+++ b/test.html
@@ -10,13 +10,14 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         body {
-            margin-top: 100px;
+            margin-top: 50px;
             text-align: center;
             background-color: aquamarine;
         }
 
         .contain {
             position: relative;
+            width: 50%;
             left: 25%;
         }
     </style>
@@ -25,16 +26,17 @@
 
 <body>
     <h1>Bán tool đổi lúa vàng blue</h1>
-    <p>Thông tin liên hệ:</p>
+    <img src="doilua.png" alt="">
+    <h4>Thông tin liên hệ:</h4>
     <div class="contain">
         <div class="row">
-            <div class="col-md-3">
-                <p>Tính ĐZ:</p>
+            <div class="col-md-6">
+                <h4>Tính ĐZ</h4>
                 <a href="https://www.facebook.com/tinhducla" class="btn btn-primary">Facebook</a>
                 <a href="https://zalo.me/0362511165" class="btn btn-success">Zalo</a>
             </div>
-            <div class="col-md-3">
-                <p>Trùm Lương:</p>
+            <div class="col-md-6">
+                <h4>Trùm Lương</h4>
                 <a href="https://www.facebook.com/chiluong.hoang.58" class="btn btn-primary">Facebook</a>
                 <!-- <a href="https://zalo.me/0362511165" class="btn btn-success">Zalo</a> -->
             </div>
